# Monda-Challenge

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
config/: settings.py  subsets.yml
data/sample/: events_1.csv  events_2.csv  events_3.csv
flows/: load.py  pipeline.py  subset.py
tests/: test_pipeline_smoke.py  test_snowflake_helpers_sql.py  test_subset_config.py  test_type_inference.py
utils/: minio_helpers.py  snowflake_helpers.py  type_inference.py  validators.py
